Update Simplest AI Algorithm Known To Mankind.ipynb

--- a/Simplest AI Algorithm Known To Mankind.ipynb
+++ b/Simplest AI Algorithm Known To Mankind.ipynb
@@ -124,13 +124,13 @@
     "            W[0] += X[i][0]*learn_rate\n",
     "            W[1] += X[i][1]*learn_rate\n",
     "            b += learn_rate\n",
-    "            # Move line closer to the misclassified red? point\n",
+    "            # Move line closer to the misclassified red point\n",
     "            \n",
     "        elif y[i]-y_hat == -1:\n",
     "            W[0] -= X[i][0]*learn_rate\n",
     "            W[1] -= X[i][1]*learn_rate\n",
     "            b -= learn_rate\n",
-    "            # Move line closer to the misclassified blue? point\n",
+    "            # Move line closer to the misclassified blue point\n",
     "            \n",
     "    return W, b\n",
     "\n",
