Update Simplest AI Algorithm Known To Mankind.ipynb

--- a/Simplest AI Algorithm Known To Mankind.ipynb
+++ b/Simplest AI Algorithm Known To Mankind.ipynb
@@ -181,7 +181,7 @@
     "        Weights, # Random weights\n",
     "        Bias # Random bias based on x_max\n",
     "    )\n",
-    "    Weights, Bias = Output # The updated values z\n",
+    "    Weights, Bias = Output # The updated values\n",
     "    boundary_lines.append((-Weights[0]/Weights[1], -Bias/Weights[1]))\n",
     "\n",
     "RW = Weights\n",
